Fix header rendering issues on small screens

--- a/envergo/static/sass/project.scss
+++ b/envergo/static/sass/project.scss
@@ -1284,9 +1284,11 @@ footer {
 }
 
 .fr-header {
-  .fr-header__logo {
-    padding-top: 0.25rem;
-    padding-bottom: 0.25rem;
+  @media (width >= 62em) {
+    .fr-header__logo {
+      padding-top: 0.25rem;
+      padding-bottom: 0.25rem;
+    }
   }
 
   .fr-nav__link,
@@ -1296,9 +1298,11 @@ footer {
   }
 
   &.header-slim {
-    .fr-header__body-row {
-      padding: 0.75rem 0;
-      line-height: 1rem;
+    @media (width >= 62em) {
+      .fr-header__body-row {
+        padding: 0.75rem 0;
+        line-height: 1rem;
+      }
 
       img {
         max-height: 2rem;
@@ -1335,7 +1339,7 @@ footer {
     top: 0;
     z-index: 2000;
 
-    .fr-btn {
+    .fr-btn:not(.fr-btn--menu) {
       // Dsfr style for this selector is weirdly specific
       // So !important is necessary to override it
       font-size: 0.875rem !important;
